--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/index.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <app-root class="d-flex flex-column h-100"></app-root>
+  <app-root class="d-flex flex-column h-100 gradient"></app-root>
 </body>
 
 </html>
